--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Имплантация Пермь</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
     <header class="header">
-        <div class="header-first">
-        </div>
+        <div class="header-first"></div>
     </header>
 
     <button id="back-to-top-btn">&#8593;</button>
@@ -23,7 +24,9 @@
     <div class="top-block">
         <div class="row">
             <nav class="navbar">
-                <h1>Жемчуг</h1>
+                <a href="https://zhemchug59.ru" target="_blank">
+                    <h1>Жемчуг</h1>
+                </a>
                 <ul>
                     <li><a href="#services">Услуги</a></li>
                     <li><a href="#advantages">Плюсы</a></li>
@@ -40,34 +43,36 @@
 
     <a name="services"></a>
     <div class="container">
+        <h1>Наши услуги</h1>
         <div class="content-section">
             <div class="card">
                 <img src="./public/pictures/implantation.jpg">
                 <h2>Протезирование</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsum!</p>
-                <button class="order-button">Узнать подробнее</button>
+                <a href="https://zhemchug59.ru/service/implantaciya-zubov" target="_blank"><button class="order-button">Узнать подробнее</button></a>
             </div>
             <div class="card">
                 <img src="./public/pictures/implantation.jpg">
                 <h2>Имплантация</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsum!</p>
-                <button class="order-button">Узнать подробнее</button>
+                <a href="https://zhemchug59.ru/service/implantaciya-zubov" target="_blank"><button class="order-button">Узнать подробнее</button></a>
             </div>
             <div class="card">
                 <img src="./public/pictures/implantation.jpg">
                 <h2>Чистка зубов</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsum!</p>
-                <button class="order-button">Узнать подробнее</button>
+                <a href="https://zhemchug59.ru/service/implantaciya-zubov" target="_blank"><button class="order-button">Узнать подробнее</button></a>
             </div>
         </div>
     </div>
 
     <a name="advantages"></a>
     <div class="container">
+        <h1>Наши плюсы</h1>
         <div class="content-section">
             <div class="card">
                 <img src="./public/pictures/implantation.jpg">
-                <h2>Персонализированное лечение</h2>
+                <h2>Персональное лечение</h2>
                 <p>Каждому пациенту предоставляется индивидуальный план лечения, учитывающий его потребности и
                     особенности.</p>
             </div>
@@ -95,19 +100,18 @@
                     <i class="fas fa-map-marker-alt"></i>
                     <div class="topic">Адрес</div>
                     <div class="text-one">г. Пермь</div>
-                    <div class="text-two">Шоссе Космонавтов, дом 74</div>
+                    <div class="text-two"><a href="https://yandex.ru/maps/?text=Пермь, Жемчуг, шоссе космонавтов 74" target="_blank">Шоссе Космонавтов, дом 74</a></div>
                 </div>
                 <div class="phone details">
                     <i class="fas fa-phone-alt"></i>
                     <div class="topic">Телефон</div>
-                    <div class="text-one">8-423-031-53-78</div>
-                    <div class="text-two">8-723-904-52-72</div>
+                    <div class="text-one"><a href="tel:+73422333486">8-342-233-34-86</a></div>
+                    <div class="text-two"><a href="tel:+79523334386">8-952-333-43-86</a></div>
                 </div>
                 <div class="email details">
                     <i class="fas fa-envelope"></i>
                     <div class="topic">Email</div>
-                    <div class="text-one">zhemchug59@mail.ru</div>
-                    <!-- <div class="text-two">admin@site.com</div> -->
+                    <div class="text-one"><a href="mailto:zhemchug59@mail.ru">zhemchug59@mail.ru</a></div>
                 </div>
             </div>
             <div class="right-side">
@@ -116,21 +120,21 @@
                     Если у вас есть какие-то вопросы или предложения по сотрудничеству -
                     заполните форму ниже
                 </p>
-                <form action="#">
+                <form action="#" method="post" id="form">
                     <div class="input-box">
-                        <input type="text" placeholder="Ваше имя" />
+                        <input type="text" placeholder="Ваше имя" id="name"/>
                     </div>
                     <div class="input-box">
-                        <input type="text" placeholder="Введите email" />
+                        <input type="text" placeholder="Введите email" id="email"/>
                     </div>
                     <div class="input-box">
-                        <input type="text" placeholder="Введите телефон" />
+                        <input type="text" placeholder="Введите телефон" id="phone"/>
                     </div>
                     <div class="input-box message-box">
-                        <textarea placeholder="Сообщение"></textarea>
+                        <textarea placeholder="Сообщение" id="message"></textarea>
                     </div>
                     <div class="button1">
-                        <input type="button" value="Отправить" />
+                        <button class="order-button1" type="submit">Отправить</button>
                     </div>
                 </form>
             </div>
@@ -141,7 +145,7 @@
         <h1>Мы здесь!</h1>
         <iframe
             src="https://yandex.ru/map-widget/v1/?um=constructor%3A85d5dd678eadde74f57d913c82ea622bb845afbac49e11b8878e0ced465d6fd7&amp;source=constructor"
-            width="800" height="550" frameborder="0"></iframe>
+            width="100%" height="550" frameborder="0"></iframe>
     </div>
     </div>
 
