--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -25,7 +25,8 @@
         <div class="row">
             <nav class="navbar">
                 <a href="https://zhemchug59.ru" target="_blank">
-                    <h1>Жемчуг</h1>
+                    <!-- <h1>Жемчуг</h1> -->
+                    <img src="./public/pictures/logo-small.png"/>
                 </a>
                 <ul>
                     <li><a href="#services">Услуги</a></li>
@@ -46,7 +47,7 @@
         <h1>Наши услуги</h1>
         <div class="content-section">
             <div class="card">
-                <img src="./public/pictures/implantation.jpg">
+                <img src="./public/pictures/neylon.jpg">
                 <h2>Протезирование</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsum!</p>
                 <a href="https://zhemchug59.ru/service/implantaciya-zubov" target="_blank"><button class="order-button">Узнать подробнее</button></a>
@@ -68,25 +69,22 @@
 
     <a name="advantages"></a>
     <div class="container">
-        <h1>Наши плюсы</h1>
+        <h1>Наши преимущества</h1>
         <div class="content-section">
             <div class="card">
-                <img src="./public/pictures/implantation.jpg">
-                <h2>Персональное лечение</h2>
-                <p>Каждому пациенту предоставляется индивидуальный план лечения, учитывающий его потребности и
-                    особенности.</p>
+                <img src="./public/pictures/specialist.png">
+                <h2>Команда профессионалов</h2>
+                <p>У нас работают высококлассные специалисты с большим опытом работы, которые находят индивидуальный подход к каждому клиенту.</p>
             </div>
             <div class="card">
-                <img src="./public/pictures/implantation.jpg">
-                <h2>Современные технологии</h2>
-                <p>Клиника оснащена самым современным оборудованием, что позволяет проводить лечение на высочайшем
-                    уровне эффективности и безопасности.</p>
+                <img src="./public/pictures/workplace.png">
+                <h2>Современное оборудование</h2>
+                <p>Наше оборудование соответствует всеми необходимыми стандартами качества, позволяющими проводить стоматологические процедуры качественно и безболезненно.</p>
             </div>
             <div class="card">
-                <img src="./public/pictures/implantation.jpg">
-                <h2>Комфортная атмосфера</h2>
-                <p>Дружелюбный персонал и уютный интерьер создают приятную обстановку, которая помогает пациентам
-                    чувствовать себя расслабленно и комфортно во время посещения клиники.</p>
+                <img src="./public/pictures/warranty1.png">
+                <h2>Гарантия</h2>
+                <p>Мы готовы предоставить гарантию на наши услуги, так как мы уверены в надежности материалов и качестве услуг.</p>
             </div>
         </div>
     </div>
@@ -131,7 +129,7 @@
                         <input type="text" placeholder="Введите телефон" id="phone"/>
                     </div>
                     <div class="input-box message-box">
-                        <textarea placeholder="Сообщение" id="message"></textarea>
+                        <textarea placeholder="Ваши пожелания" id="message"></textarea>
                     </div>
                     <div class="button1">
                         <button class="order-button1" type="submit">Отправить</button>
