--- a/index.html
+++ b/index.html
@@ -16,24 +16,58 @@
 
 <body>
     <header class="header">
-        <div class="header-first"></div>
+        <div class="header-top">
+            <a href="https://zhemchug59.ru" target="_blank" class="header-img">
+                <!-- <h1>Жемчуг</h1> -->
+                <img src="./public/pictures/logo-small.png"/>
+            </a>
+            <div class="header-time">
+                <svg class="svg-inline--fa fa-clock fa-w-16" style="margin-right: 5px;" aria-hidden="true" data-prefix="far" data-icon="clock" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="#095c83" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"></path></svg>
+                <div>
+                    <div>
+                        Время работы
+                    </div>
+                    пн-пт: с 08:00 до 20:00
+                </div>
+            </div>
+            <div class="header-address">
+                <svg xmlns="http://www.w3.org/2000/svg" style="margin-right: 5px;" width="32" height="40" viewBox="0 0 27 32" fill="none"> <path d="M25.5455 13.2727C25.5455 22.8182 13.2727 31 13.2727 31C13.2727 31 1 22.8182 1 13.2727C1 10.0178 2.29302 6.89618 4.5946 4.5946C6.89618 2.29302 10.0178 1 13.2727 1C16.5277 1 19.6493 2.29302 21.9509 4.5946C24.2524 6.89618 25.5455 10.0178 25.5455 13.2727Z" stroke="#095c83" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/> <path d="M13.2728 17.3635C15.5321 17.3635 17.3637 15.5319 17.3637 13.2725C17.3637 11.0132 15.5321 9.18164 13.2728 9.18164C11.0134 9.18164 9.18188 11.0132 9.18188 13.2725C9.18188 15.5319 11.0134 17.3635 13.2728 17.3635Z" stroke="#095c83" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/> </svg>
+                <div>
+                    <div>
+                        Адрес
+                    </div>
+                    <div class="top-contact"><a href="https://yandex.ru/maps/?text=Пермь, Жемчуг, шоссе космонавтов 74" target="_blank">ул. Шоссе Космонавтов, дом 74</a></div>
+                </div>
+            </div>
+            <div class="header-phone">
+                <svg xmlns="http://www.w3.org/2000/svg" style="margin-right: 5px;" width="33" height="40" viewBox="0 0 33 32" fill="none"> <path d="M19.7375 7.12147C21.0728 7.3478 22.3102 7.96743 23.2913 8.90107C24.2724 9.83471 24.9525 11.0399 25.2447 12.3623M19.6026 1.67939C22.371 1.91766 24.9762 3.0902 26.9904 5.00448C29.0045 6.91877 30.3079 9.46101 30.6865 12.2138M29.5951 23.1045L29.6963 27.186C29.7072 27.5649 29.6389 27.9419 29.4957 28.2928C29.3525 28.6438 29.1376 28.9609 28.8647 29.224C28.5919 29.4871 28.2671 29.6903 27.9111 29.8206C27.5552 29.9508 27.176 30.0054 26.7978 29.9806C22.6 29.6295 18.543 28.2986 14.9529 26.0949C11.6139 24.0875 8.75782 21.3696 6.58748 18.1341C4.20019 14.6418 2.66911 10.6362 2.11829 6.4419C2.07496 6.06652 2.11028 5.68622 2.22198 5.32523C2.33368 4.96424 2.51933 4.63047 2.76709 4.34515C3.01486 4.05984 3.31932 3.82924 3.66109 3.66804C4.00286 3.50685 4.37445 3.41858 4.7522 3.40886L8.83377 3.30768C9.49387 3.28482 10.1398 3.50276 10.6511 3.9209C11.1624 4.33903 11.5042 4.92882 11.6128 5.58033C11.8175 6.88225 12.1687 8.15684 12.6599 9.37978C12.8551 9.86221 12.9078 10.3905 12.8119 10.9019C12.716 11.4134 12.4755 11.8867 12.1189 12.2657L10.4338 14.0363C12.455 17.3945 15.3452 20.1448 18.7993 21.9971L20.4843 20.2264C20.8452 19.8515 21.306 19.5878 21.8121 19.4667C22.3181 19.3456 22.8484 19.3721 23.3399 19.543C24.5856 19.973 25.8761 20.2607 27.1865 20.4006C27.8497 20.4775 28.4616 20.7954 28.9057 21.2939C29.3497 21.7925 29.5951 22.4368 29.5951 23.1045Z" stroke="#095c83" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/> </svg>
+                <div>
+                    <div>Телефон</div>
+                    <div class="top-contact"><a href="tel:+73422333486">+7-342-233-34-86</a>, <a href="tel:+79523334386">+7-952-333-43-86</a></div>
+                </div>
+            </div>
+            <div class="header-vk">
+                <svg xmlns="http://www.w3.org/2000/svg" width="42" height="42" viewBox="0 0 42 42" fill="none"> <circle cx="20.8928" cy="21.1072" r="20.8928"/> <path fill-rule="evenodd" clip-rule="evenodd" d="M31.6387 17.1035C31.7975 16.6422 31.6387 16.3066 30.9351 16.3066H28.5976C28.0075 16.3066 27.7352 16.6002 27.5764 16.9148C27.5764 16.9148 26.3735 19.5991 24.6941 21.3396C24.1494 21.843 23.8998 22.0107 23.6048 22.0107C23.4459 22.0107 23.2417 21.843 23.2417 21.3816V17.0825C23.2417 16.5373 23.0602 16.2856 22.5608 16.2856H18.8844C18.5213 16.2856 18.2943 16.5373 18.2943 16.789C18.2943 17.3133 19.134 17.4391 19.2248 18.907V22.0946C19.2248 22.7867 19.0886 22.9125 18.7936 22.9125C17.9993 22.9125 16.0703 20.2072 14.9128 17.1245C14.6859 16.5163 14.459 16.2856 13.8689 16.2856H11.5087C10.8278 16.2856 10.7144 16.5793 10.7144 16.8938C10.7144 17.46 11.5087 20.3121 14.4135 24.0869C16.3426 26.6663 19.0886 28.0504 21.5623 28.0504C23.0602 28.0504 23.2417 27.7358 23.2417 27.2116V25.2613C23.2417 24.6321 23.3779 24.5273 23.8545 24.5273C24.1949 24.5273 24.8076 24.695 26.1919 25.9323C27.7806 27.4003 28.0529 28.0714 28.938 28.0714H31.2755C31.9563 28.0714 32.2741 27.7568 32.0926 27.1486C31.8883 26.5405 31.1167 25.6597 30.1181 24.6111C29.5734 24.024 28.7564 23.3739 28.5068 23.0593C28.1664 22.6399 28.2572 22.4721 28.5068 22.0946C28.4841 22.0946 31.3436 18.3618 31.6387 17.1035Z" fill="#FFFFFF"/> </svg>
+            </div>
+        </div>
+
+        <div class="header-bottom">
+            <nav class="navbar">
+
+                <div class="navbar-buttons">
+                    <a href="#services">Услуги</a>
+                    <a href="#advantages">Преимущества</a>
+                    <a href="#contacts">Контакты</a>
+                </div>
+            </nav>
+        </div>
     </header>
 
     <button id="back-to-top-btn">&#8593;</button>
 
     <div class="top-block">
         <div class="row">
-            <nav class="navbar">
-                <a href="https://zhemchug59.ru" target="_blank">
-                    <!-- <h1>Жемчуг</h1> -->
-                    <img src="./public/pictures/logo-small.png"/>
-                </a>
-                <ul>
-                    <li><a href="#services">Услуги</a></li>
-                    <li><a href="#advantages">Плюсы</a></li>
-                    <li><a href="#contacts">Контакты</a></li>
-                </ul>
-            </nav>
+
             <div class="content">
                 <h1>Имплантация и протезирование</h1>
                 <p>Стоматологическая клиника "Жемчуг"</p>
@@ -50,19 +84,19 @@
                 <img src="./public/pictures/neylon.jpg">
                 <h2>Протезирование</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsum!</p>
-                <a href="https://zhemchug59.ru/service/implantaciya-zubov" target="_blank"><button class="order-button">Узнать подробнее</button></a>
+                <a><button class="order-button" id="service-1-open">Узнать подробнее</button></a>
             </div>
             <div class="card">
                 <img src="./public/pictures/implantation.jpg">
                 <h2>Имплантация</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsum!</p>
-                <a href="https://zhemchug59.ru/service/implantaciya-zubov" target="_blank"><button class="order-button">Узнать подробнее</button></a>
+                <a><button class="order-button" id="service-2-open">Узнать подробнее</button></a>
             </div>
             <div class="card">
                 <img src="./public/pictures/implantation.jpg">
                 <h2>Чистка зубов</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsum!</p>
-                <a href="https://zhemchug59.ru/service/implantaciya-zubov" target="_blank"><button class="order-button">Узнать подробнее</button></a>
+                <a ><button class="order-button" id="service-3-open">Узнать подробнее</button></a>
             </div>
         </div>
     </div>
@@ -145,6 +179,30 @@
             src="https://yandex.ru/map-widget/v1/?um=constructor%3A85d5dd678eadde74f57d913c82ea622bb845afbac49e11b8878e0ced465d6fd7&amp;source=constructor"
             width="100%" height="550" frameborder="0"></iframe>
     </div>
+    </div>
+
+    <div class="popup-service" id="service1Popup">
+        <div class="popup-service-content">
+            <div class="popup-header">
+                Протезирование <img src="public/pictures/closeIcon.png" id="service1PopupClose">
+            </div>
+        </div>
+    </div>
+
+    <div class="popup-service" id="service2Popup">
+        <div class="popup-service-content">
+            <div class="popup-header">
+                Имплантация <img src="public/pictures/closeIcon.png" id="service2PopupClose">
+            </div>
+        </div>
+    </div>
+
+    <div class="popup-service" id="service3Popup">
+        <div class="popup-service-content">
+            <div class="popup-header">
+                Чистка зубов <img src="public/pictures/closeIcon.png" id="service3PopupClose">
+            </div>
+        </div>
     </div>
 
     <footer class="footer">
